--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
+
+    <div>Cabecera</div>
+    
     <h1>Hola mundo de git</h1>
     <p>Vamos a aprender git</p>
 
