La parte de html de la rama es cafe y el resto verde

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <div>Cabecera</div>
+    <div id="rama">No soy una cabecera, soy una rama</div>
     
     <h1>Hola mundo de git</h1>
     <p>Vamos a aprender git</p>
