le puse colores al parrafo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <p>uwu</p>
 
-    <p>hola soy un parrafo para modificar 
+    <p id="parrafo1">hola soy un parrafo para modificar 
         la version de la master - version original</p>
     
 </body>
