vamos a generar un conflicto de merge - Cambio desde la rama 'Cabecera'

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 
-    <div id="rama">No soy una cabecera, soy una rama</div>
+    <div id="rama">No soy una cabecera, soy una rama - 
+        Vamos a dañar el merge :)
+    </div>
     
     <h1>Hola mundo de git</h1>
     <p>Vamos a aprender git</p>
