cambio para generar error de merge en con la rama 'master' y nuevo parrafo que simula un cambio necesario para el proyecto

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 
-    <div id="rama">No soy una cabecera, soy una rama</div>
+    <div id="rama">No soy una cabecera, soy una rama - 
+        error de merge rama Master
+    </div>
     
     <h1>Hola mundo de git</h1>
     <p>Vamos a aprender git</p>
@@ -19,6 +21,8 @@
 
     <p id="parrafo1">hola soy un parrafo para modificar 
         la version de la master - version original</p>
+
+    <p>Simulo un cambio nuevo que es necesario</p>
     
 </body>
 </html>
