Hago un cambio desde el edit de git hub
por que puedo

--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
 
     <p>Simulo un cambio nuevo que es necesario</p>
     
+    <p>Hago un cambio desde el edit de git hub</p>
+    
 </body>
 </html>
