cambie texto para que sea mas entendible

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <div id="rama">No soy una cabecera, soy una rama - 
-        error de merge rama Master
+        error de merge rama main
     </div>
     
     <h1>Hola mundo de git</h1>
@@ -26,8 +26,8 @@
 
     <p>uwu</p>
 
-    <p id="parrafo1">hola soy un parrafo para modificar 
-        la version de la master - version original</p>
+    <p id="parrafo1">Hola soy un parrafo para modificar 
+        la version de la main - version original</p>
 
     <p>Simulo un cambio nuevo que es necesario</p>
     
